# C-Codes

./: a.out  aiurea.cpp  descompunere_nr_prime.cpp  exercies  exercies.cpp  exercitii.cpp  exercitiiIII.cpp  file_saver.cpp  first_program.cpp  matrice.cpp  max_min.cpp  mod_calculator.cpp  model2.cpp  pascal_triangle.cpp  phone_number.cpp  polinomial.cpp  probleme.cpp  probleme_2.cpp  programul_fianl.cpp  sir_numere_prime.cpp  sum_numbers_mod.cpp  sum_of_three_numbers.cpp  suma_nr_pare_impare.cpp  test.py
Algoritmi_interclasare/: a.out  in.txt  problema1.cpp  problema2.cpp  problema3.cpp  problema4.cpp
Atestat/: sub12.cpp  sub16.cpp  sub18.cpp  sub19.cpp  sub20.cpp  sub24.cpp  sub3.cpp  sub30.cpp  sub31.cpp  sub4.cpp  sub7.cpp  sub8.cpp
Backtracking/: a.out  problema1.cpp
ProblemeBAC/: BinaryToDecimal.cpp  CMakeLists.txt  Perechipare.cpp  bac.txt  balaur.cpp  inter.cpp  problema_pseudo.cpp
ProblemeBAC/Algoritmica/: CMakeLists.txt
Probleme_algoritmica/: a.out  itec.cpp  itec1.cpp  perechipare.cpp  tablou.cpp
Probleme_bac/: a.out  problema2.cpp  problema_matrice1  problema_matrice1.cpp  problema_matrice2.cpp  problema_recursivitate  problema_recursivitate.cpp  problema_recursivitate1  problema_recursivitate1.cpp  problema_sir1  problema_sir1.cpp  problema_subIII3_1  problema_subIII3_1.cpp  problema_subIII4.cpp  problema_subIII_1.cpp  problema_subIII_1_2.cpp  problema_subIII_1_3.cpp  problema_subIII_1_4.cpp  problema_subIII_2_1.cpp  problema_subIII_2_2.cpp  problema_subIII_2_3.cpp  problema_subIII_3_3.cpp  problema_subiectIII_3.cpp  probleme_matrice3  probleme_matrice3.cpp  probleme_recursivitate2  probleme_recursivitate2.cpp  probleme_subp1.cpp  transform.cpp
Probleme_brainly/: a.out  sir.cpp
Probleme_class/: a.out  cmmd.cpp  linear_list.cpp  problema1.cpp  problema2.cpp  problema3.cpp  problema4.cpp  stack.cpp
Probleme_fisiere/: .solution_2.cpp.swp  a.out  first_step.cpp  in.txt  out.txt  problema1.cpp  problema10  problema10.cpp  problema11.cpp  problema12.cpp  problema13.cpp  problema14.cpp  problema15.cpp  problema2.cpp  problema3.cpp  problema4.cpp  problema5  problema5.cpp  problema6  problema6.cpp  problema7.cpp  problema8.cpp  problema9.cpp
Probleme_fisiere/Test/: a.out  problema1.cpp
Probleme_informatica/: a.out  afisare_inversa.cpp  cautare_element.cpp  cea_mai_mare_suma.cpp  deasupra_diagonalei_principale_1.cpp  diag_principala_elem.cpp  diagonala_principala.cpp  diagonala_secundara.cpp  elemente_pos_neg_nul.cpp  eliminare_valoare.cpp  exercitiu_7_mai.cpp  inserare_valoare.cpp  inversare_vector.cpp  matrice-Bidimensionala_suma.cpp  matrice_unidimensionala_suma_pozitii.cpp  max_min.cpp  max_min_mat.cpp  max_multiplu.cpp  maxim_vector.cpp  permutare_circulara_dreapta.cpp  permutarea_circulara_stanga.cpp  problema  problema1.cpp  problema11_mai.cpp  problema4.cpp  problema5_bac.cpp  problema_18mai.cpp  problema_28mai.cpp  problema_bac.cpp  problema_bac2.cpp  problema_bac3.cpp  problema_bac4.cpp  problema_fundamentali.cpp  problema_sortare_p_1.cpp  problema_x_scade_valoare_par.cpp  probleme.cpp  prod_mat.cpp  reluare_problema_28mai.cpp  sortare_matrice_2d.cpp  stergere_linie_coloana.cpp  (+5 more)
Probleme_matrici/: a.out  in.txt  problema10.cpp  problema11.cpp  problema12.cpp  problema13.cpp  problema14.cpp  problema15.cpp  problema16.cpp  problema17.cpp  problema18.cpp  problema19.cpp  problema20.cpp  problema21.cpp  problema22.cpp  problema23.cpp  problema25.cpp  problema27.cpp  problema28.cpp  problema29.cpp  problema30.cpp  problema31.cpp  problema32.cpp  problema33.cpp  problema34.cpp  problema35.cpp  problema36.cpp  problema37.cpp  problema5.cpp  problema6.cpp  problema7.cpp  problema8.cpp  problema9.cpp  stergere_inserare_rand_coloana.cpp
Probleme_matrici_complexe/: sub1.cpp  sub2.cpp  sub3.cpp  sub4.cpp  sub5.cpp  sub6.cpp  sub7.cpp  sub8.cpp  sub9.cpp
Probleme_recursivitate/: a.out  problema1  problema1.cpp  problema2  problema2.cpp
Probleme_siruri/: LuizaProtectionProgram_main.cpp  a.out  in.txt  problema1  problema1.cpp  problema1.ii  problema10.cpp  problema11  problema11.cpp  problema12.cpp  problema13.cpp  problema14.cpp  problema15.cpp  problema16.cpp  problema17.cpp  problema19.cpp  problema2.cpp  problema20.cpp  problema21.cpp  problema22.cpp  problema23.cpp  problema24.cpp  problema25  problema25.cpp  problema26.cpp  problema27.cpp  problema28.cpp  problema29.cpp  problema3.cpp  problema30.cpp  problema31.cpp  problema4.cpp  problema5.cpp  problema7  problema7.cpp  problema8.cpp  problema9.cpp  probleme6.cpp
Probleme_siruri/Functii_siruri/: a.out  problema1.cpp  strcat_sir.cpp  strchr_sir.cpp  strcmp_sir.cpp  strcpy_sir.cpp  strlen_sir.cpp  strtok_sir.cpp
Probleme_siruri/Prezentare_clasa/: exemplu_strchr.cpp  strchr_sir.cpp  strcmp_sir.cpp  strrchr_sir.cpp  strstr_sir.cpp
Probleme_structs/: a.out  problema1.cpp
Probleme_subprpgrame/: a.out  in.txt  problema1  problema1.cpp  problema10.cpp  problema11.cpp  problema12.cpp  problema13.cpp  problema14.cpp  problema15.cpp  problema16.cpp  problema17.cpp  problema18.cpp  problema19.cpp  problema2.cpp  problema20.cpp  problema21.cpp  problema22.cpp  problema23.cpp  problema24.cpp  problema25.cpp  problema26.cpp  problema27.cpp  problema3.cpp  problema5  problema5.cpp  problema6.cpp  problema8.cpp  problema9.cpp
Probleme_vectori/: a.out  in.txt  problema1.cpp  problema10.cpp  problema11.cpp  problema12.cpp  problema13.cpp  problema2  problema2.cpp  problema3.cpp  problema4.cpp  problema5.cpp  problema6.cpp  problema7.cpp  problema8.cpp  problema9.cpp
RandomThingsGo/: CMakeLists.txt  Product.java  area_circle.cpp  bac.txt  cash_back.cpp  custom.cpp  descompunere_nr_prime.cpp  destination.txt  exerciesII.cpp  exercitiiIV.cpp  first_program  miri.cpp  model.cpp  model3.cpp  numere_consecutive.cpp  output  problema.cpp  reverse_number.cpp  source.txt  sqrt.cpp  tema.java  test.cpp  test3.cpp  test_danut.cpp  triunghi_complexa.cpp
iTec/: Cristea_Luca_P1.cpp  Cristea_Luca_P4.cpp  problema1.cpp  problema2.cpp  problema3.cpp
