cmake_minimum_required(VERSION 3.19)
project(C_Codes)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C_Codes
        Algoritmi_interclasare/problema1.cpp
        Algoritmi_interclasare/problema2.cpp
        Algoritmi_interclasare/problema3.cpp
        Algoritmi_interclasare/problema4.cpp
        Backtracking/problema1.cpp
        iTec/Cristea_Luca_P1.cpp
        iTec/Cristea_Luca_P4.cpp
        iTec/problema1.cpp
        iTec/problema2.cpp
        iTec/problema3.cpp
        Probleme_algoritmica/itec.cpp
        Probleme_algoritmica/itec1.cpp
        Probleme_algoritmica/perechipare.cpp
        Probleme_bac/problema_matrice1.cpp
        Probleme_bac/problema_matrice2.cpp
        Probleme_bac/problema_recursivitate.cpp
        Probleme_bac/problema_recursivitate1.cpp
        Probleme_bac/problema_sir1.cpp
        Probleme_bac/problema_subiectIII_3.cpp
        Probleme_bac/problema_subIII3_1.cpp
        Probleme_bac/problema_subIII4.cpp
        Probleme_bac/problema_subIII_1.cpp
        Probleme_bac/problema_subIII_1_2.cpp
        Probleme_bac/problema_subIII_1_3.cpp
        Probleme_bac/problema_subIII_1_4.cpp
        Probleme_bac/problema_subIII_2_1.cpp
        Probleme_bac/problema_subIII_2_2.cpp
        Probleme_bac/problema_subIII_2_3.cpp
        Probleme_bac/problema_subIII_3_3.cpp
        Probleme_bac/probleme_matrice3.cpp
        Probleme_bac/probleme_recursivitate2.cpp
        Probleme_bac/probleme_subp1.cpp
        Probleme_brainly/sir.cpp
        Probleme_class/cmmd.cpp
        Probleme_class/linear_list.cpp
        Probleme_class/problema1.cpp
        Probleme_class/problema2.cpp
        Probleme_class/problema3.cpp
        Probleme_class/problema4.cpp
        Probleme_class/stack.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_1/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_1_Solution/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_2/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_2_Solution/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_3/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_3_Solution/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_4/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_4_Solution/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_5/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Challenge_5_Solution/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/CopyFile_2/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Manip_Base/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Manip_Boolean/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Manip_Fields/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/Manip_Floating/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/ReadFile_1/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/ReadFile_2/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/ReadFile_3/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/ReadFile_4/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/StringStream/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/WriteFile_1/main.cpp
        Probleme_fisiere/Files/Source-codes-Section-19-IO-and-Streams/Section19/WriteFIle_2/main.cpp
        Probleme_fisiere/Test/problema1.cpp
        Probleme_fisiere/first_step.cpp
        Probleme_fisiere/problema1.cpp
        Probleme_fisiere/problema10.cpp
        Probleme_fisiere/problema11.cpp
        Probleme_fisiere/problema12.cpp
        Probleme_fisiere/problema13.cpp
        Probleme_fisiere/problema14.cpp
        Probleme_fisiere/problema15.cpp
        Probleme_fisiere/problema2.cpp
        Probleme_fisiere/problema3.cpp
        Probleme_fisiere/problema4.cpp
        Probleme_fisiere/problema5.cpp
        Probleme_fisiere/problema6.cpp
        Probleme_fisiere/problema7.cpp
        Probleme_fisiere/problema8.cpp
        Probleme_fisiere/problema9.cpp
        Probleme_informatica/afisare_inversa.cpp
        Probleme_informatica/cautare_element.cpp
        Probleme_informatica/cea_mai_mare_suma.cpp
        Probleme_informatica/deasupra_diagonalei_principale_1.cpp
        Probleme_informatica/diag_principala_elem.cpp
        Probleme_informatica/diagonala_principala.cpp
        Probleme_informatica/diagonala_secundara.cpp
        Probleme_informatica/elemente_pos_neg_nul.cpp
        Probleme_informatica/eliminare_valoare.cpp
        Probleme_informatica/exercitiu_7_mai.cpp
        Probleme_informatica/inserare_valoare.cpp
        Probleme_informatica/inversare_vector.cpp
        Probleme_informatica/matrice-Bidimensionala_suma.cpp
        Probleme_informatica/matrice_unidimensionala_suma_pozitii.cpp
        Probleme_informatica/max_min.cpp
        Probleme_informatica/max_min_mat.cpp
        Probleme_informatica/max_multiplu.cpp
        Probleme_informatica/maxim_vector.cpp
        Probleme_informatica/permutare_circulara_dreapta.cpp
        Probleme_informatica/permutarea_circulara_stanga.cpp
        Probleme_informatica/problema11_mai.cpp
        Probleme_informatica/problema5_bac.cpp
        Probleme_informatica/problema_18mai.cpp
        Probleme_informatica/problema_28mai.cpp
        Probleme_informatica/problema_bac.cpp
        Probleme_informatica/problema_bac2.cpp
        Probleme_informatica/problema_bac3.cpp
        Probleme_informatica/problema_bac4.cpp
        Probleme_informatica/problema_fundamentali.cpp
        Probleme_informatica/problema_sortare_p_1.cpp
        Probleme_informatica/problema_x_scade_valoare_par.cpp
        Probleme_informatica/probleme.cpp
        Probleme_informatica/prod_mat.cpp
        Probleme_informatica/reluare_problema_28mai.cpp
        Probleme_informatica/sortare_matrice_2d.cpp
        Probleme_informatica/stergere_linie_coloana.cpp
        Probleme_informatica/suma_elem.cpp
        Probleme_informatica/suma_prod.cpp
        Probleme_informatica/test.cpp
        Probleme_informatica/test2.cpp
        Probleme_informatica/text.cpp
        Probleme_informatica/tot_despre_matrice_patratica.cpp
        Probleme_matrici/problema10.cpp
        Probleme_matrici/problema11.cpp
        Probleme_matrici/problema12.cpp
        Probleme_matrici/problema13.cpp
        Probleme_matrici/problema14.cpp
        Probleme_matrici/problema15.cpp
        Probleme_matrici/problema16.cpp
        Probleme_matrici/problema17.cpp
        Probleme_matrici/problema18.cpp
        Probleme_matrici/problema19.cpp
        Probleme_matrici/problema20.cpp
        Probleme_matrici/problema21.cpp
        Probleme_matrici/problema22.cpp
        Probleme_matrici/problema23.cpp
        Probleme_matrici/problema24.cpp
        Probleme_matrici/problema25.cpp
        Probleme_matrici/problema5.cpp
        Probleme_matrici/problema6.cpp
        Probleme_matrici/problema7.cpp
        Probleme_matrici/problema8.cpp
        Probleme_matrici/problema9.cpp
        Probleme_matrici/probleme26.cpp
        Probleme_matrici/stergere_inserare_rand_coloana.cpp
        Probleme_recursivitate/problema1.cpp
        Probleme_recursivitate/problema2.cpp
        Probleme_siruri/Functii_siruri/problema1.cpp
        Probleme_siruri/Functii_siruri/strcat_sir.cpp
        Probleme_siruri/Functii_siruri/strchr_sir.cpp
        Probleme_siruri/Functii_siruri/strcmp_sir.cpp
        Probleme_siruri/Functii_siruri/strcpy_sir.cpp
        Probleme_siruri/Functii_siruri/strlen_sir.cpp
        Probleme_siruri/Functii_siruri/strtok_sir.cpp
        Probleme_siruri/Prezentare_clasa/exemplu_strchr.cpp
        Probleme_siruri/Prezentare_clasa/strchr_sir.cpp
        Probleme_siruri/Prezentare_clasa/strcmp_sir.cpp
        Probleme_siruri/Prezentare_clasa/strrchr_sir.cpp
        Probleme_siruri/Prezentare_clasa/strstr_sir.cpp
        Probleme_siruri/LuizaProtectionProgram_main.cpp
        Probleme_siruri/problema1.cpp
        Probleme_siruri/problema1.ii
        Probleme_siruri/problema10.cpp
        Probleme_siruri/problema11.cpp
        Probleme_siruri/problema12.cpp
        Probleme_siruri/problema13.cpp
        Probleme_siruri/problema14.cpp
        Probleme_siruri/problema15.cpp
        Probleme_siruri/problema16.cpp
        Probleme_siruri/problema17.cpp
        Probleme_siruri/problema18.cpp
        Probleme_siruri/problema19.cpp
        Probleme_siruri/problema2.cpp
        Probleme_siruri/problema20.cpp
        Probleme_siruri/problema21.cpp
        Probleme_siruri/problema22.cpp
        Probleme_siruri/problema23.cpp
        Probleme_siruri/problema24.cpp
        Probleme_siruri/problema25.cpp
        Probleme_siruri/problema3.cpp
        Probleme_siruri/problema4.cpp
        Probleme_siruri/problema5.cpp
        Probleme_siruri/problema7.cpp
        Probleme_siruri/problema8.cpp
        Probleme_siruri/problema9.cpp
        Probleme_siruri/probleme6.cpp
        Probleme_structs/problema1.cpp
        Probleme_subprpgrame/problema1.cpp
        Probleme_subprpgrame/problema10.cpp
        Probleme_subprpgrame/problema11.cpp
        Probleme_subprpgrame/problema12.cpp
        Probleme_subprpgrame/problema13.cpp
        Probleme_subprpgrame/problema14.cpp
        Probleme_subprpgrame/problema15.cpp
        Probleme_subprpgrame/problema16.cpp
        Probleme_subprpgrame/problema17.cpp
        Probleme_subprpgrame/problema2.cpp
        Probleme_subprpgrame/problema3.cpp
        Probleme_subprpgrame/problema4.cpp
        Probleme_subprpgrame/problema5.cpp
        Probleme_subprpgrame/problema6.cpp
        Probleme_subprpgrame/problema8.cpp
        Probleme_subprpgrame/problema9.cpp
        Probleme_vectori/problema1.cpp
        Probleme_vectori/problema2.cpp
        Probleme_vectori/problema3.cpp
        Probleme_vectori/problema4.cpp
        Probleme_vectori/problema5.cpp
        Probleme_vectori/problema6.cpp
        Probleme_vectori/problema7.cpp
        Probleme_vectori/problema8.cpp
        aiurea.cpp
        area_circle.cpp
        cash_back.cpp
        custom.cpp
        descompunere_nr_prime.cpp
        exercies.cpp
        exerciesII.cpp
        exercitii.cpp
        exercitiiIII.cpp
        exercitiiIV.cpp
        file_saver.cpp
        first_program.cpp
        matrice.cpp
        max_min.cpp
        mod_calculator.cpp
        model.cpp
        model2.cpp
        model3.cpp
        numere_consecutive.cpp
        pascal_triangle.cpp
        phone_number.cpp
        polinomial.cpp
        probleme.cpp
        probleme_2.cpp
        programul_fianl.cpp
        reverse_number.cpp
        sir_numere_prime.cpp
        sqrt.cpp
        sum_numbers_mod.cpp
        sum_of_three_numbers.cpp
        suma_nr_pare_impare.cpp
        test.cpp
        test3.cpp
        test_danut.cpp
        triunghi_complexa.cpp)
